# PromptEval

./: README.md
tools/prompt-eval/: .gitignore  AGENTS.md  README.md  pyproject.toml
tools/prompt-eval/evals/elegant_objects/: rubric.md  suite.yaml
tools/prompt-eval/evals/feature_sliced_design/: rubric.md  suite.yaml
tools/prompt-eval/prompt_eval/: case_generator.py  checks.py  cli.py  config.py  fsd_check.py  models.py  records.py  reports.py  runner.py  sandbox.py  scoring.py
tools/prompt-eval/prompt_eval/agents/: base.py  codex_agent.py  fixture_agent.py  mock_agent.py  openai_agent.py
tools/prompt-eval/prompt_eval/judges/: base.py  common.py  mock_judge.py  openai_judge.py  subagent_judge.py
tools/prompt-eval/prompts/elegant_objects/: eo_greenfield.md  eo_lite.md  eo_planner.md  eo_refactor.md  eo_reviewer.md  eo_strict.md  procedural_helper.md
tools/prompt-eval/prompts/feature_sliced_design/: baseline.md  fsd_guide.md  fsd_minimal.md  fsd_strict.md  fsd_terse.md
tools/prompt-eval/records/elegant_objects/: 20260504-053625-329688-9c3f76be.json  20260504-053625-329688-9c3f76be.md  20260504-054022-327772-99c8e2de.json  20260504-054022-327772-99c8e2de.md  20260504-054415-289840-0741dafe.json  INDEX.md  (+17 more)
tools/prompt-eval/tests/: test_case_generator.py  test_case_loading.py  test_cli.py  test_codex_missing.py  test_deterministic_checks.py  test_fixture_agents.py  test_fsd_check.py  test_multi_run.py  test_openai_agent.py  test_openai_judge.py  test_records.py  test_reports.py  test_sandbox.py  test_scoring.py  test_subagent_judge.py
(+353 files in other folders)
