[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-eval"
version = "0.1.0"
description = "Small local harness for coding-agent prompt evaluation"
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
judge = ["openai>=1.0.0"]
dev = ["pytest", "ruff>=0.15.0"]

[project.scripts]
peval = "prompt_eval.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
extend-exclude = [
    "fixtures",
    "generated-cases",
    "records",
    "runs",
]
